fix pie chart overlap with footer issue

--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -1,10 +1,17 @@
-.profile-pie {
-  z-index: 1;
-  overflow: hidden;
+.sticky {
+  position: -webkit-sticky; /* Safari */
+  position: sticky;
+  top: 0;
 
-  width: 400px;
-  height: 400px;
+  .profile-pie {
+    overflow: hidden;
+
+    width: 400px;
+    height: 400px;
+
+  }
 }
+
 
 .key-info-row{
   margin-bottom: 15px;
