--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -4,7 +4,6 @@
   min-height: 140px;
   background: $gray-gradient;
   color: $brandprimary;
-  z-index: 2;
   h4 {
     margin-bottom: 30px;
   }
